修改了部分文件中的引用，使得在build过程中不会出错

--- a/app/css-basis/clearfix/clearfix.html
+++ b/app/css-basis/clearfix/clearfix.html
@@ -13,6 +13,7 @@
             width: 100px;
             height: 100px;
             margin-right: 10px;
+            margin-bottom: 20px;
             background-color: red;
         }
 
@@ -91,7 +92,7 @@
     </div>
     
     <!-- 第二种 -->
-    <div class="parentBox clearfix2">
+    <div class="parentBox clearfix2" style="min-height:200px;">
         <div class="float"></div>
         <div class="float"></div>
     </div>
