--- a/app/css-basis/line-height&vertical-align/line-height&vertical-align.html
+++ b/app/css-basis/line-height&vertical-align/line-height&vertical-align.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
+    <!-- build:css(.) styles/line-height-vendor.css -->
    
     <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css" />
     <link rel="stylesheet" href="bower_components/reveal.js/css/theme/night.css" />
     <link rel="stylesheet" href="bower_components/reveal.js/lib/css/zenburn.css" />
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="../../styles/main.css">
-    <link rel="stylesheet" href="../../styles/line-height.css">
+    <!-- build:css(.tmp) styles/line-height.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/line-height.css">
     <!-- endbuild -->
 </head>
 <body>
@@ -578,11 +578,13 @@
         </div>
     </div>
     
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- <script src="bower_components/zepto/zepto.js"></script> -->
+    <!-- build:js(.) scripts/line-height-vendor.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/headjs/dist/1.0.0/head.min.js"></script>
     <script src="bower_components/reveal.js/js/reveal.js"></script>
+    <script src="bower_components/reveal.js/plugin/highlight/highlight.js"></script>
+    <script src="bower_components/reveal.js/plugin/notes/notes.js"></script>
+    <script src="bower_components/reveal.js/plugin/zoom-js/zoom.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -595,8 +597,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="../../scripts/main.js"></script>
+    <!-- build:js({app,.tmp}) scripts/line-height-main.js -->
+    <script src="scripts/main.js"></script>
     <!-- endbuild -->
     
 </body>
