--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
+    <!-- build:js({app,.tmp}) scripts/index.js -->
     <script src="scripts/index.js"></script>
         <!-- endbuild -->
 </body>
