--- a/app/js-advanced/jquery/callbacks.html
+++ b/app/js-advanced/jquery/callbacks.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
+    <!-- build:css(.) styles/jquery-vendor.css -->
    
     <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css" />
     <link rel="stylesheet" href="bower_components/reveal.js/css/theme/night.css" />
     <link rel="stylesheet" href="bower_components/reveal.js/lib/css/zenburn.css" />
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="../../styles/main.css">
+    <!-- build:css(.tmp) styles/jquery-main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/deferred.css">
     <!-- endbuild -->
 </head>
 <body>
@@ -366,11 +367,13 @@ callbacks.add(fn3);
     </div>
       
 </body>
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- <script src="bower_components/zepto/zepto.js"></script> -->
+    <!-- build:js(.) scripts/jquery-vendor.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/headjs/dist/1.0.0/head.min.js"></script>
     <script src="bower_components/reveal.js/js/reveal.js"></script>
+    <script src="bower_components/reveal.js/plugin/highlight/highlight.js"></script>
+    <script src="bower_components/reveal.js/plugin/notes/notes.js"></script>
+    <script src="bower_components/reveal.js/plugin/zoom-js/zoom.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -383,8 +386,7 @@ callbacks.add(fn3);
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="../../scripts/main.js">
+    <script>
         // Full list of configuration options available here:
         // https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
@@ -439,5 +441,4 @@ callbacks.add(fn3);
             }]
         });
     </script>
-    <!-- endbuild -->
 </html>
