1、添加了变量定义页 2、修改了add函数里面的部分注释

--- a/app/js-advanced/jquery/callbacks.html
+++ b/app/js-advanced/jquery/callbacks.html
@@ -48,6 +48,31 @@ jQuery.Callbacks = function(options) {
                 </code></pre>
             </section>
             <section>
+                <h3>变量定义</h3>
+                <pre><code>
+var // Flag to know if list is currently firing
+firing,
+
+// Last fire value for non-forgettable lists
+memory,
+
+// Flag to know if list was already fired
+fired,
+
+// Flag to prevent firing
+locked,
+
+// Actual callback list
+list = [],
+
+// Queue of execution data for repeatable lists
+queue = [],
+
+// Index of currently firing callback (modified by add/remove as needed)
+firingIndex = -1,
+                </code></pre>
+            </section>
+            <section>
                 <h3>add 方法</h3>
                 <pre><code>
 // Add a callback or a collection of callbacks to the list
@@ -55,6 +80,8 @@ add: function() {
     if ( list ) {
 
         // If we have memory from a past run, we should fire after adding
+        // 如果memory被设置了，则在加入回调函数后立即触发该函数
+        // 这一特性非常重要，我们会在deferred对象中体会到它的妙处
         if ( memory && !firing ) {
             firingIndex = list.length - 1;
             queue.push( memory );
@@ -403,42 +430,7 @@ callbacks.add(fn3);
             // Parallax scrolling
             // parallaxBackgroundImage: "https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg",
             // parallaxBackgroundSize: "2100px 900px",
-
-            // Optional libraries used to extend on reveal.js
-            dependencies: [{
-                src: "../../bower_components/reveal.js/lib/js/classList.js",
-                condition: function() {
-                    return !document.body.classList;
-                }
-            }, {
-                src: "../../bower_components/reveal.js/plugin/markdown/marked.js",
-                condition: function() {
-                    return !!document.querySelector("[data-markdown]");
-                }
-            }, {
-                src: "../../bower_components/reveal.js/plugin/markdown/markdown.js",
-                condition: function() {
-                    return !!document.querySelector("[data-markdown]");
-                }
-            }, {
-                src: "../../bower_components/reveal.js/plugin/highlight/highlight.js",
-                async: true,
-                callback: function() {
-                    hljs.initHighlightingOnLoad();
-                }
-            }, {
-                src: "../../bower_components/reveal.js/plugin/zoom-js/zoom.js",
-                async: true,
-                condition: function() {
-                    return !!document.body.classList;
-                }
-            }, {
-                src: "../../bower_components/reveal.js/plugin/notes/notes.js",
-                async: true,
-                condition: function() {
-                    return !!document.body.classList;
-                }
-            }]
+            
         });
     </script>
 </html>
