修改了创建mindmap时的遍历算法

--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,22 @@
     <!-- build:css(.tmp) styles/main.css -->
     <!-- endbuild -->
     <style>
-      a{
-        width: auto !important;
-      }
+        html,body {
+            height: 100%;
+            margin: 0;
+        }
+        a{
+            width: auto !important;
+        }
+        #mindmap {
+            width: 500px;
+            height: 500px;
+        }
     </style>
   </head>
   <body>
-    
+    <div id="main"></div>
+    <!-- <canvas id="mindmap"></canvas> -->
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -38,17 +47,8 @@
     <script src="bower_components/js-mindmap/js-mindmap.js"></script>
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-
     <!-- build:js({app,.tmp}) scripts/index.js -->
+    <!-- <script src="scripts/mindmap.js"></script> -->
     <script src="scripts/index.js"></script>
         <!-- endbuild -->
 </body>
